--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postbuild": "tsc -p netlify-functions.tsconfig.json"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
