--- a/netlify.toml
+++ b/netlify.toml
@@ -5,17 +5,7 @@
 [build.environment]
   NODE_VERSION = "22.14.0"
 
-[functions]
-  directory = "netlify/functions"
-
-# Use a simpler approach for authentication
-[[redirects]]
-  from = "/*"
-  to = "/.netlify/functions/middleware"
-  status = 200
-  force = true
-  
-# SPA fallback after authentication
+# SPA fallback
 [[redirects]]
   from = "/*"
   to = "/index.html"
