Load store when logging in

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # API Configuration
 VITE_API_URL=https://api.example.com
-VITE_STORE_ID=1
 VITE_LOGO_URL=https://example.com/logo.png
 
 # Supabase Configuration
 VITE_SUPABASE_URL=https://your-supabase-project-url.supabase.co
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+VITE_SUPABASE_PROJECT_ID=your-supabase-project-id
