--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-# API Configuration
-VITE_API_URL=https://api.example.com
+# No API configuration needed - using Supabase directly
 
 # Supabase Configuration
 VITE_SUPABASE_URL=https://your-supabase-project-url.supabase.co
