--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-router": "^1.114.22",
     "axios": "^1.8.3",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
@@ -26,6 +27,7 @@
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.114.22",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/lodash": "^4.17.16",
