--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-router": "^1.114.22",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.3",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
